# redux-rs

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  rust.yml
benches/: counter.rs
examples/: basic_todo.rs  counter.rs  logger_middleware.rs  reverse.rs  thunk_middleware.rs  thunk_middleware_fn.rs
src/: lib.rs  middleware.rs  reducer.rs  selector.rs  store.rs  subscriber.rs  subscription.rs
src/middlewares/: logger.rs  mod.rs  thunk.rs
src/store/: mailbox.rs  mod.rs  store.rs  worker.rs
src/store/worker/: dispatch.rs  mailbox.rs  mod.rs  select.rs  subscribe.rs  work.rs
tests/: combine.rs  counter.rs  middleware.rs  replace.rs  subscription.rs
