[package]
name = "redux-rs"
version = "0.1.0"
description = "A Rust implementation of Redux."
authors = ["Jeroen Vervaeke <jeroen@vervaeke.nu>", "Jan Baudisch <dev@baudisch.xyz>"]
license = "MIT"
homepage = "https://github.com/redux-rs/redux-rs"
repository = "https://github.com/redux-rs/redux-rs.git"
readme = "README.md"
edition = "2018"

[dependencies]
async-trait = "0.1.52"
log = "0.4"
tokio = { version = "1", features = [ "sync", "rt" ] }

[dev-dependencies]
tokio = { version = "1", features = [ "sync", "rt", "rt-multi-thread", "macros" ] }