[package]
name = "redux-rs"
version = "0.3.0"
description = "A Rust implementation of Redux."
authors = ["Jeroen Vervaeke <jeroen@vervaeke.nu>", "Jan Baudisch <dev@baudisch.xyz>"]
license = "MIT"
homepage = "https://github.com/redux-rs/redux-rs"
repository = "https://github.com/redux-rs/redux-rs.git"
readme = "README.md"
edition = "2018"

[dependencies]
async-trait = "0.1.52"
env_logger = { version = "0.9.0", optional = true }
log = { version = "0.4", optional = true }
tokio = { version = "1", features = [ "sync", "rt" ] }

[dev-dependencies]
tokio = { version = "1", features = [ "sync", "rt", "rt-multi-thread", "time", "macros" ] }

[features]
default = []
middleware_logger = [ "log" ]
middleware_thunk = []
example_logger_middleware_dependencies = [ "middleware_logger", "env_logger" ]
example_thunk_middleware_dependencies = [ "middleware_thunk" ]

[[example]]
name = "basic_todo"

[[example]]
name = "logger_middleware"
required-features = [ "example_logger_middleware_dependencies" ]

[[example]]
name = "thunk_middleware_fn"
required-features = [ "example_thunk_middleware_dependencies" ]

[[example]]
name = "thunk_middleware_trait"
required-features = [ "example_thunk_middleware_dependencies" ]